# smort-home

./: .clang-format  CMakeLists.txt  backup.json  cap.sh  data.json
src/: main.cpp  telegram.cpp  telegram.h
src/frontend/: deviceWidget.cpp  deviceWidget.h  window.h  yeelightModel.h
src/http/: helper.cpp  helper.h
src/steam/: requester.cpp  requester.h
src/telegram/: manager.cpp  manager.h  telegram.cpp  telegram.h
src/yeelight/: device.cpp  device.h  manager.cpp  manager.h  scanner.cpp  scanner.h  util.h
